<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Rekuta</string>
    <string name="about">About</string>
    <string name="add_oremo_comment_file">Add OREMO comment file</string>
    <string name="allow">Allow</string>
    <string name="bgm_off">BGM OFF</string>
    <string name="bgm_on">BGM ON</string>
    <string name="current_voicebank">"Voicebank: %s"</string>
    <string name="custom_bgm_not_found">Error: Custom BGM file not found or access denied, please reset it in the Settings.</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="done">Done!</string>
    <string name="end">End</string>
    <string name="enter_voicebank">Enter voicebank</string>
    <string name="file_not_found">Error: File not found.</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_recorded_sample_yet">No recorded sample yet.</string>
    <string name="no_voicebank">No Voicebank</string>
    <string name="okay">Okay</string>
    <string name="play">Play</string>
    <string name="please_allow_permission">Please Allow Required Permissions</string>
    <string name="please_enter_voicebank_folder">Please enter voicebank folder.</string>
    <string name="please_wait">Please wait…</string>
    <string name="previous">Previous</string>
    <string name="record">Record</string>
    <string name="recording">Recording…</string>
    <string name="reset">Reset</string>
    <string name="select_a_file">Select a File</string>
    <string name="select_a_reclist">Select a Reclist</string>
    <string name="select_an_oremo_comment_file">Select an OREMO Comment File</string>
    <string name="set">Set</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="welcome_to_rekuta">Welcome to Rekuta!</string>
    <string name="yes">Yes</string>
    <string name="version">Version</string>
    <string name="licenses">Licenses</string>
    <string name="developer">Developer</string>

    <!-- Dialogs -->
    <string name="about_title">About</string>
    <string name="about_content">Rekuta - Record Your Own UTAU\n\nMade by Mashi\n\nCredits:\nOremo (BGM)\n\nLibraries:\nFilePicker by Akshay (Apache-2.0 license)</string>
    <string name="delete_sample_title">Delete Sample</string>
    <string name="delete_sample_content">Are you sure you want to delete this sample?</string>

    <!-- Preferences -->
    <string name="settings_title">Settings</string>
    <string name="configuration">Configuration</string>
    <string name="use_kana_title">Use Kana as Filename</string>
    <string name="use_kana_summary">Save samples in Kana. Only applies for built-in reclists.</string>
    <string name="record_start_title">Recording Start</string>
    <string name="record_start_summary">Delay before the recording starts (in milliseconds).</string>
    <string name="record_end_title">Recording End</string>
    <string name="record_end_summary">Delay before the recording ends (in milliseconds).</string>
    <string name="background_music">Background Music</string>
    <string name="background_music_title">Background Music</string>
    <string name="appearance">Appearance</string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">Set application theme.</string>
    <string name="theme_auto_title">Follow System</string>
    <string name="theme_light_title">Light Mode</string>
    <string name="theme_dark_title">Dark Mode</string>

</resources>
